Feature/save current playlist (#2)
* wip

* completed copy playlist (renamed from save playlist for clarity)

* Added delete playlist button

* Added create new blank playlist button

--- a/resources/web/ytplayer/index.html
+++ b/resources/web/ytplayer/index.html
@@ -169,9 +169,21 @@
                                 <button type="button" class="btn btn-secondary btn-sm" id="playlist-shuffle-button" data-toggle="tooltip" title="Shuffle songs">
                                     <i class="fas fa-random"></i>
                                 </button>
+                                <!-- Create playlist button -->
+                                <button type="button" class="btn btn-secondary btn-sm" id="create-playlist-button" data-toggle="tooltip" title="Create blank playlist">
+                                    <i class="fas fa-plus-square"></i>
+                                </button>
+                                <!-- Copy playlist button -->
+                                <button type="button" class="btn btn-secondary btn-sm" id="copy-playlist-button" data-toggle="tooltip" title="Copy current playlist">
+                                  <i class="fas fa-copy"></i>
+                                </button>
                                 <!-- Load playlist button -->
                                 <button type="button" class="btn btn-secondary btn-sm" id="load-playlist-button" data-toggle="tooltip" title="Load playlist">
                                     <i class="fas fa-upload"></i>
+                                </button>
+                                <!-- Delete playlist button -->
+                                <button type="button" class="btn btn-secondary btn-sm" id="delete-playlist-button" data-toggle="tooltip" title="Delete a playlist">
+                                    <i class="fas fa-trash"></i>
                                 </button>
                             </div>
                         </div>
