--- a/resources/web/ytplayer/index.html
+++ b/resources/web/ytplayer/index.html
@@ -230,6 +230,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clusterize.js/0.18.0/clusterize.min.js"></script>
     <!-- Load the player config file -->
     <script src="/ytplayer/js/playerConfig.js"></script>
+    <!-- Load he -->
+    <script src="/ytplayer/js/util/he.js"></script>
     <!-- Helper functions -->
     <script src="/ytplayer/js/util/helpers.js"></script>
     <!-- Load the main player script -->
